<resources>
    <string name="app_name">Francing\'s Footwear Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="inventory">Inventory</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="date">All Rights Reserved 2024</string>
    <string name="dashboard">Dashboard</string>
    <string name="fullname">Fullname</string>
    <string name="create_product">Create Product</string>
    <string name="variations">Variations</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add_size">Add Size</string>
    <string name="size_name">Size name</string>
    <string name="category">Category</string>
    <string name="variation_name">Variation Name</string>
    <string name="sizes">Sizes</string>
    <string name="size">size</string>

    <string name="contact">Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_address">Save Address</string>
    <string name="complete_address">Complete Address</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_0_00">₱ 0.00</string>
    <string name="_0">0</string>
    <string name="subtotal">Subtotal:</string>
    <string name="your_order_might_be_declined_if_you_don_t_pay_within_24_hours">Your order might be declined if you don\'t pay within 24 hours.</string>
    <string name="evaluate_the_reason_for_declining_order">Evaluate the reason for declining order</string>
    <string name="sample">649 R. Hidalgo Street, Barangay 307 Quiapo, City of Manila, Metro Manila 1001</string>
    <string name="this_is_sample_message_only_try_another_coder_here_hahaha">This is sample message only try another coder here hahaha</string>



<!--    <string name="privacy">-->

<!--        Privacy Policy\n\n-->
<!--        The Francing’s Incorporated respect the privacy of the visitors to the Online Shoe Store.com website and the local websites connected with it,-->
<!--        and take great care to protect your information. This privacy policy tells you what information we collect from you, how we may use it and the steps we take to ensure that it is protected.\n\n-->

<!--        Protection of visitor’s information\n\n-->
<!--        In order to protect the information, you provide to us by visiting our website we have implemented various security measures.-->
<!--        Your personal information is contained behind secured networks and is only accessible by a limited number of people,-->
<!--        who have special access rights and are required to keep the information confidential. Please keep in mind though that whenever-->
<!--        you give out personal information online there is a risk that third parties may intercept and use that information.-->
<!--        While Online Shoe Store strives to protect its users personal information and privacy, we cannot guarantee the security of any information you disclose online and you do so at your own risk. \n\n-->

<!--        Use of cookies \n\n-->
<!--        A cookie is a small string of information that the website that you visit transfers to your computer for identification purposes.-->
<!--        Cookies can be used to follow your activity on the website and that information helps us to understand your preferences and improve your website experience.-->
<!--        Cookies are also used to remember for instance your user name and password.-->
<!--        You can turn off all cookies, in case you prefer not to receive them.-->
<!--        You can also have your computer warn you whenever cookies are being used. For both options you have to adjust your browser settings (like internet explorer).-->
<!--        There are also software products available that can manage cookies for you.-->
<!--        Please be aware though that when you have set your computer to reject cookies, it can limit the functionality of the website you visit and-->
<!--        it’s possible then that you do not have access to some of the features on the website. \n\n-->

<!--        Online policy \n\n-->
<!--        The Privacy Policy does not extend to anything that is inherent in the operation of the internet, and therefore beyond Adidas' control,-->
<!--        and is not to be applied in any manner contrary to applicable law or governmental regulation. This online privacy policy only applies-->
<!--        to information collected through our website and not to information collected offline. \n\n-->

<!--    </string>-->


    <string name="terms">
        TERMS &amp; CONDITIONS\n\n

        Last Updated: [1/30/2024]\n\n

        1.) User Account Responsibilities:\n
        Users are responsible for maintaining the confidentiality of their account information, including login credentials. Any activity that occurs under the user\'s account is their responsibility.\n\n
        2.) Prohibited Activities:\n
        Clearly outline activities that are strictly prohibited on the platform, such as fraudulent transactions,
        hacking, or any other illegal activities. Specify the consequences for engaging in such activities, including account suspension or legal action.\n\n
        3.) Payment Terms:\n
        The application only accepts  COD, and Gcash payments throughout the whole process.
        Any other transaction that is not mentioned above is strictly prohibited by the company. Any result of unusual payments is not covered by the company.\n\n
        4.) Shipping and Delivery:\n
        Fracings footware  company offers a COD mode of transaction. An additional
        Fee will be charged to the customer once they ordered a product through COD method.
        Any damaged, loss, or wrong package delivery is covered by the company as long as it is proven that it is the company\'s negligence.\n\n
        5.) Intellectual Property Rights:\n
        All of the trademarks, photos, and descriptions of the products are authorized by the companies. Users should not reproduce, distribute, or modify any content without explicit permission.
    </string>

</resources>