<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/dashboard" />


    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/transactions"
        android:title="Transactions" />


    <item
        android:id="@+id/navigation_customers"
        android:icon="@drawable/baseline_groups_2_24"
        android:title="Customers" />


    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/orders"
        android:title="@string/inventory" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account"/>
    </group>

</menu>