<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.nav.account.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/circularImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/profiles"
                style="@style/CornerCut"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textFullname"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/juan_dela_cruz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/textEmail"
                android:fontFamily="@font/poppins"
                android:text="juan@gmail.com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:backgroundTint="@color/white"
                android:text="@string/edit_profile"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/buttonEditProfile"
                android:textAlignment="textStart"
                android:paddingVertical="12dp"
                app:cornerRadius="5dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:elevation="5dp"/>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:backgroundTint="@color/white"
                android:id="@+id/buttonChangePassword"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/change_password"
                android:textAlignment="textStart"
                android:paddingVertical="12dp"
                app:cornerRadius="5dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:elevation="5dp"/>




            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:backgroundTint="@color/white"
                android:text="@string/terms_and_conditions"
                android:textAlignment="textStart"
                android:id="@+id/buttonTerms"
                android:paddingVertical="12dp"
                app:cornerRadius="5dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:elevation="5dp"/>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:backgroundTint="@color/white"
                android:text="@string/privacy_policy"
                android:id="@+id/buttonPrivacy"
                android:textAlignment="textStart"
                android:paddingVertical="12dp"
                app:cornerRadius="5dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:elevation="5dp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogout"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EF5350"
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:drawableTint="#FFFFFF"
                android:elevation="5dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingVertical="12dp"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                app:cornerRadius="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/date"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>