<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.nav.inventory.productlisting.ViewProductFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/product"
        android:scaleType="fitXY"
        android:id="@+id/imageProduct"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/product_name"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />
        <TextView
            android:id="@+id/textPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:text="₱ 0.00"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateVariation"
        android:layout_width="match_parent"
        android:paddingVertical="16dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:cornerRadius="10dp"
        android:text="Add Variation"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_add_circle_24"
        app:iconTint="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerviewVariations"
        tools:listitem="@layout/adapter_variations"
        android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>