<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".views.nav.inventory.productlisting.CreateProductFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/buttonAddImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="5dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/add_image"
                style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
                android:background="@drawable/image_bg"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/accent1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxStrokeWidth="0dp"

                android:id="@+id/layoutProductName"

                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:id="@+id/inputProductName"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/accent1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/layoutCategory">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/inputCategory"
                    android:hint="@string/category" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/accent1"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:id="@+id/layoutProductDescription"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:id="@+id/inputProductDesc"
                    android:inputType="textMultiLine"
                    android:lines="4"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveProduct"
            app:cornerRadius="10dp"
            android:paddingVertical="16dp"
            android:text="Save Product"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>