<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/accent1"
    android:fillViewport="true"
    tools:context=".views.nav.transactions.ReviewTransactions">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="5dp"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="02113252452"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/textTransactionID"/>

                    <TextView
                        android:id="@+id/textStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/status_bg"
                        android:backgroundTint="#E8F5E9"
                        android:text="status"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Order Information"
                    android:textSize="12sp"
                    android:textColor="#C1BFBF" />


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="2"
                    android:columnCount="2"
                    android:layout_gravity="center"
                    android:padding="5dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        android:layout_columnWeight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:layout_marginEnd="2dp"
                            android:text="Items :"/>
                        <TextView
                            android:id="@+id/textItems"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:text="2"/>
                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        android:layout_columnWeight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:layout_marginEnd="2dp"
                            android:text="Total :"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:id="@+id/textTotal"
                            android:textStyle="bold"
                            android:text="@string/_0_00"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        android:layout_columnWeight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:layout_marginEnd="2dp"
                            android:text="Shipping :"/>
                        <TextView
                            android:id="@+id/textShipping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:text="@string/_0_00"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        android:layout_columnWeight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:layout_marginEnd="2dp"
                            android:text="Status:"/>
                        <TextView
                            android:id="@+id/textPayment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:text="2"/>
                    </LinearLayout>

                </GridLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Recipient"
                    android:textSize="12sp"
                    android:textColor="#C1BFBF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:id="@+id/textFullname"
                        android:textStyle="bold"
                        android:text="@string/juan_dela_cruz"
                        android:maxLines="1"
                        android:ellipsize="end"/>


                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/textPhone"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="09885656425"
                        android:textColor="#C1BFBF" />
                </LinearLayout>


                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@color/accent1"
                    android:padding="10dp"
                    android:text="@string/sample"
                    android:textColor="#C1BFBF"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="10dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:cardBackgroundColor="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Items"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerviewItems"
            tools:listitem="@layout/adapter_items"/>
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="10dp"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Track your order"
                    android:layout_marginVertical="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recyclerviewStatus"
                    tools:listitem="@layout/adapter_transaction_status"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>